@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 23:22:32 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 23:23:37 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -236,5 +236,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>黑白大廚：料理階級大戰引發預訂熱潮。...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 23:22:32 +0800</pubDate>
+</item><item>
+  <title>韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界</title>
+  <link>https://www.famechos.me/news/韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界.html</link>
+  <description>韓國首次接受藝術品作為繼承稅的非貨幣支付。...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 23:23:37 +0800</pubDate>
 </item></channel>
 </rss>
