@@ -1,0 +1,273 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u97d3\u570b\u85dd\u8853\u754c\u65b0\u6642\u4ee3\uff01\u9996\u6b21\u63a5\u53d7\u85dd\u8853\u54c1\u7e73\u7d0d\u7e7c\u627f\u7a05\uff0c\u8c50\u5bcc\u570b\u5167\u85dd\u8853\u754c", "description": "\u97d3\u570b\u85dd\u8853\u754c\u65b0\u6642\u4ee3\uff01\u9996\u6b21\u63a5\u53d7\u85dd\u8853\u54c1\u7e73\u7d0d\u7e7c\u627f\u7a05\uff0c\u8c50\u5bcc\u570b\u5167\u85dd\u8853\u754c", "url": "https://www.famechos.me/news/\u97d3\u570b\u85dd\u8853\u754c\u65b0\u6642\u4ee3\uff01\u9996\u6b21\u63a5\u53d7\u85dd\u8853\u54c1\u7e73\u7d0d\u7e7c\u627f\u7a05\uff0c\u8c50\u5bcc\u570b\u5167\u85dd\u8853\u754c.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T23:23:31.571505+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界.html"/>
+<meta name="description" content="韓國藝術界迎來新時代！政府首次接受藝術品繳納繼承稅，豐富國內藝術界，帶來新機遇與挑戰。">
+
+<meta name="keywords" content="韓國藝術界、藝術品繳納繼承稅、國內藝術界、藝術新時代">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界.html" />
+        <meta property="og:title" content="韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界" />
+        <meta property="og:description" content="韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界" />
+        <meta property="twitter:description" content="韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>韓國政府最近通過修訂《繼承稅及贈與稅法》，允許受益人通過捐贈文化文物或藝術品來繳納繼承稅。這一新政策已經首次被執行，國稅廳瑞草區廳收到10件藝術品的申請，其中4件經過七位專家的評估後獲得文化體育觀光部的批准。</p>
+<p>這四件藝術品包括曾梵志的兩幅《肖像》（2007年），李滿益的《日出》（1991年），以及全光榮的《聚合08-JU072 BLUE》（2008年）。這些藝術品將被添加到韓國現代美術館（MMCA）的藏品中，並可能在未來的展覽中展出。</p>
+<p>韓國政府修訂稅法的目的是為了豐富國內藝術界，增強地方公共博物館的藏品，防止重要的私人藏品流失到國際市場。藝術界人士預計，這一新政策將會對韓國藝術界產生積極的影響。</p>
+<p>韓國以外，英國和法國等國家早已接受重要的文化資產作為繼承稅的替代品。法國在1968年引入了這一制度，並在巴黎建立了畢卡索美術館，該館是基於畢卡索家族通過「接受替代」方案捐贈給國家的兩件捐贈而建立的。</p>
+<table>
+<tr>
+<th>國家</th>
+<th>藝術品捐贈制度</th>
+</tr>
+<tr>
+<td>法國</td>
+<td>1968年引入「接受替代」方案</td>
+</tr>
+<tr>
+<td>英國</td>
+<td>接受重要的文化資產作為繼承稅的替代品</td>
+</tr>
+</table>
+<p>韓國的新政策將會對藝術界產生什麼影響？我們拭目以待。</p>
+
+<p>資料來源：TheKoreaTimes</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gIUTbZWOlAQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持.html">RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國娛樂圈為韓江諾貝爾文學獎而沸騰！BTS成員V、RM等藝人紛紛恭賀.html">韓國娛樂圈為韓江諾貝爾文學獎而沸騰！BTS成員V、RM等藝人紛紛恭賀</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英.html">釜山國際電影節觀眾人數破紀錄！14.5萬人爭睹全球影壇精英</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
