@@ -272,4 +272,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T23:23:37+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
